# EngagementRLfD

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-notes.md  git-sizer  ros-docker-notes.md  writing.md
actor_tf/: CMakeLists.txt
doc/: bvh.md  mocap-sports.md
matlab-scripts/: AttentionMap.m  GazeboLinkPose.m  RobotControlTf.m  getFigure.m  load_file.m  main.m  stateTransition.m
matlab-scripts/test-codes/: RobotControl.m  actor_joint_sub.m  engagement_main.m  main_sub.m  measurementLikelihood.m  pose_pub.m  pose_sub.m  single_joint.m
matlab-scripts/test-data/: kinect-pose-data.bag
scripts/: JointMapping.py  const.py  mpi_proc.py  node_fusion.py  node_kinect_interpretator.py  node_skeleton2marker.py  node_strategy.py  pepper_pose.py  posture-test.py  skeleton_client.js  test.txt  test3.txt  training1.txt  training2.txt  training3.txt  training4.txt
simulation/: .RobotControlTf.m.swp  ApproximateMimic.m  BVH_robot.m  RobotControlTf.m  demo1.m  load_tagstream.m  main.m  main_class.m  pathdef.m  skel_vis.m
simulation/test-codes/: main_class.m  main_dataset.m  robot_control_test.m
simulation/test-data/: temp.bag
src/: .gitignore  Dockerfile
src/main-cpp/: CMakeLists.txt  package.xml
src/main-cpp/src/: gazebolinkpose.cpp  gazebolinkpose.h  jointtracking.cpp  jointtracking.h  particlefilter.h  robotcontrol.cpp  robotcontrol.h
src/main/config/: urdf.rviz
src/main/launch/: load-scene.launch  run.launch  scene-basketball.launch  scene-boxing.launch  scene-demo.launch  scene-happy.launch  (+6 more)
src/matlab-scripts/: RobotControlTf.m  main.m  skel_vis.m
(+36 files in other folders)
